@@ -2,8 +2,10 @@ package teammates.ui.webapi;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+import org.apache.http.HttpStatus;
+
+import teammates.storage.sqlentity.Account;
 import teammates.ui.output.ReadNotificationsData;
 
 /**
@@ -22,10 +24,16 @@ public class GetReadNotificationsAction extends Action {
 
     @Override
     public ActionResult execute() {
+        Account account = sqlLogic.getAccountForGoogleId(userInfo.getId());
+        if (account == null) {
+            // This should not happen as the user is authenticated
+            return new JsonResult("Account not found", HttpStatus.SC_INTERNAL_SERVER_ERROR);
+        }
         List<UUID> readNotifications =
-                sqlLogic.getReadNotificationsId(userInfo.getId());
-        ReadNotificationsData output = new ReadNotificationsData(
-                readNotifications.stream().map(UUID::toString).collect(Collectors.toList()));
+                sqlLogic.getReadNotificationsByAccountId(account.getId()).stream()
+                        .map(n -> n.getNotification().getId())
+                        .toList();
+        ReadNotificationsData output = new ReadNotificationsData(readNotifications);
         return new JsonResult(output);
     }
 }
